--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/file-saver": "0.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "tether": "^1.4.0",
