--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/bootstrap": "^3.3.34",
     "@types/file-saver": "0.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
