Finita configurazione di Karma per testing

--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "karma start",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "docs": "npm run typedoc -- --options typedoc.json ./src/app/",
@@ -46,16 +46,20 @@
     "backbone": "^1.3.3",
     "codelyzer": "~2.0.0",
     "install": "^0.10.1",
+    "jasmine": "^2.7.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "jointjs": "^1.1.0",
     "jquery": "^3.2.1",
-    "karma": "~1.4.1",
+    "karma": "^1.4.1",
+    "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
     "lodash": "^3.10.1",
     "npm": "^4.6.1",
     "protractor": "~5.1.0",
